--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-<a href="https://mail.ru"></a>
+<!DOCTYPE html>
+    <html>
+        <head>
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&display=swap" rel="stylesheet">
+            <link rel="stylesheet" href="css/style1.css">
+        </head>
+        <body>
+            <nav>
+                <a href="#" class="menu"> Обо мне</a>
+           
+                <a href="#" class="menu"> Мои достижения</a>
+
+                <a href="https://www.dota2.com/" class="menu"> Ван лав игры</a>
+            
+                <a href="#" class="menu"> Любимая музыка</a>
+            </nav>
+            <footer class="futa">
+
+                <h2 href="" class=""> Мы будем становиться лучше для вас!</h2>
+
+            </footer>
+            <h2 class="h2"> На данный момент я учу хтмл</h2>
+            <div>
+                <a href="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/1200px-HTML5_logo_and_wordmark.svg.png">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/1200px-HTML5_logo_and_wordmark.svg.png">
+            </a> 
+        </div>
+
+
+        </body>
+
+
+
+    </html>
